--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,44 @@
 body {
-    background: black;
+    background: rgb(17, 124, 218);
+    background-image: url(src/img/mc.png);
+    background-size: 100% auto;
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes fadein {
+    0% {backdrop-filter: brightness(0%);}
+    50% {backdrop-filter: brightness(90%);}
+    100% {backdrop-filter: brightness(90%); background: linear-gradient(25deg rgba(255, 0, 0, 0.2), transparent, rgba(0, 0, 255, 0.2));}
+}
+
+.bg {
+    position: fixed;
+    transform: translate(0%, 0%);
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.0) 20%);
+    backdrop-filter: brightness(0%);
+    animation: fadein 2s cubic-bezier(.47,.1,.5,1) forwards; 
 }
 
 .container {
     position: fixed;
-    top: 50%;
+    top: 100%;
     left: 50%;
+    transform: translate(-50%, -100%);
     width: 40rem;
-    height: 28rem;
+    height: 18rem;
     background: #202020;
-    border-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    transition: 0.3s ease-out;
+    z-index: 3;
+}
+
+.container:hover {
+    height: 22rem;
 }
