--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
         background: #0f0f0f;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
+        overflow: hidden;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
         transition: 0.3s ease-out;
         z-index: 3;
@@ -73,6 +74,7 @@ body {
         transform: translate(-50%, -100%);
         width: 60%;
         height: 30%;
+        overflow: hidden;
         background: #0f0f0f;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
@@ -84,6 +86,20 @@ body {
     /* .container:hover {
         height: 32%;
     } */
+}
+
+.firstscreen, .signup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: left 400ms ease-in-out;
+}
+
+.signup {
+    left: 100%;
+    top: 0%;
 }
 
 .message {
@@ -109,7 +125,7 @@ body {
     width: auto;
     aspect-ratio: 32/6;
     left: 50%;
-    top: 6rem;
+    top: 50%;
     transform: translate(-50%, 0%);
     display: flex;
     justify-content: space-evenly;
