--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
         transform: translate(-50%, -100%);
         width: 101%;
         height: 30%;
-        background: #0f0f0f;
+        background: #ffffff;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
         overflow: hidden;
@@ -75,7 +75,7 @@ body {
         width: 60%;
         height: 30%;
         overflow: hidden;
-        background: #0f0f0f;
+        background: #ffffff;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -103,13 +103,13 @@ body {
 }
 
 .message {
-    color: white;
+    color: #0f0f0f;
     font-weight: normal;
     width: calc(100% - 2rem);
     max-width: calc(100% - 2rem);
     height: 2rem;
     line-height: 32px;
-    font-size: 24px;
+    font-size: 32px;
     letter-spacing: .5px;
     text-align: center;
     position: absolute;
@@ -137,12 +137,12 @@ body {
     position: relative;
     width: calc(100% - 1rem);
     height: calc(100% - 0.5rem);
-    background:rgb(46, 46, 46);
+    background:rgb(0, 0, 0);
     border: none;
     color: white;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     transition: 200ms ease-in-out;
 }
 
@@ -152,7 +152,6 @@ body {
 
 .choose:hover {
     width: calc(100% - .5rem);
-    font-size: 16px;
     background: rgb(38, 153, 67);
 
 }
