--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,17 @@ body {
     src: url(src/fonts/Bayon-Regular.ttf);
 }
 
-* {
+@font-face {
+    font-family: inp;
+    src: url(src/fonts/Quicksand-Regular.ttf);
+}
+
+*:not(input) {
     font-family: main;
+}
+
+input {
+    font-family: inp;
 }
 
 @keyframes fadein {
@@ -25,6 +34,10 @@ body {
 @keyframes slidein {
     from {top: 4rem; opacity: 0;}
     to {top: 2rem; opacity: 1;}
+}
+
+button {
+    z-index: 20;
 }
 
 .bg {
@@ -51,7 +64,7 @@ body {
         left: 50%;
         transform: translate(-50%, -100%);
         width: 101%;
-        height: 30%;
+        height: 40%;
         background: #ffffff;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
@@ -72,7 +85,7 @@ body {
         top: 101%;
         left: 50%;
         transform: translate(-50%, -100%);
-        width: 60%;
+        width: 50%;
         height: 30%;
         overflow: hidden;
         background: #ffffff;
@@ -109,7 +122,7 @@ body {
     max-width: calc(100% - 2rem);
     height: 2rem;
     line-height: 32px;
-    font-size: 32px;
+    font-size: 27px;
     letter-spacing: .5px;
     text-align: center;
     position: absolute;
@@ -131,7 +144,6 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
-
 
 .choose {
     position: relative;
@@ -180,8 +192,8 @@ body {
     border-radius: 8px;
     text-indent: 1rem;
     outline: none;
-    font-size: 20px;
-    transition: outline 200ms ease-in-out;
+    font-size: 14px;
+    transition: outline 100ms ease-in-out;
 }
 
 .form input:focus {
@@ -198,7 +210,8 @@ body {
     color: white;
     border: none;
     border-radius: 8px;
-    transition: width 200ms ease-in-out;
+    transition: 200ms ease-in-out;
+    cursor: pointer;
 }
 
 .form button:hover {
