--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,23 @@ button {
     animation: fadein 2s cubic-bezier(.47,.1,.5,1) forwards; 
 }
 
-@media (max-width: 721px) {
+#notificationBadge {
+    position: absolute;
+    top: -2.5rem;
+    left: 50%;
+    height: 2rem;
+    transform: translate(-50%, 0%);
+    background:rgb(94, 197, 85);
+    border: 2px solid rgb(47, 165, 31);
+    border-radius: 6px;
+    color:rgb(9, 139, 9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 200ms ease-in-out;
+}
+
+@media (max-width: 928px) {
     .container {
         position: fixed;
         top: 101%;
@@ -73,13 +89,17 @@ button {
         transition: 0.3s ease-out;
         z-index: 3;
     }
+
+    #notificationBadge {
+        width: calc(100% - 2rem);
+    }
     
     /* .container:hover {
         height: 60%;
     } */
 }
 
-@media (min-width: 722px) {
+@media (min-width: 930px) {
     .container {
         position: fixed;
         top: 101%;
@@ -94,6 +114,10 @@ button {
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
         transition: 0.3s ease-out;
         z-index: 3;
+    }
+    
+    #notificationBadge {
+        width: 50%;
     }
     
     /* .container:hover {
@@ -123,7 +147,7 @@ button {
     height: 2rem;
     line-height: 32px;
     font-size: 27px;
-    letter-spacing: .5px;
+    /* letter-spacing: .5px; */
     text-align: center;
     position: absolute;
     left: 50%;
