--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ button {
     height: 2rem;
     transform: translate(-50%, 0%);
     background:rgb(94, 197, 85);
-    border: 2px solid rgb(47, 165, 31);
+    border: 3px solid rgb(47, 165, 31);
     border-radius: 6px;
     color:rgb(9, 139, 9);
     display: flex;
@@ -125,7 +125,7 @@ button {
     } */
 }
 
-.firstscreen, .signup {
+.firstscreen, .signup, .details {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -135,6 +135,11 @@ button {
 }
 
 .signup {
+    left: 100%;
+    top: 0%;
+}
+
+.details {
     left: 100%;
     top: 0%;
 }
@@ -238,11 +243,43 @@ button {
     cursor: pointer;
 }
 
-.form button:hover {
+.form button:not(:disabled):hover {
     width: calc(100% + 12px);
     background: rgb(0, 153, 255);
 }
 
+.form button:disabled {
+    background:rgb(175, 175, 175);
+    color: black;
+    cursor: default;
+}
+
 .form button span {
     transform: skew(15deg);
+}
+
+.serdet {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20rem;
+    height: fit-content;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap:2rem;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: none;
+}
+
+.serdet input {
+    width: 100%;
+    height: 3rem;
+    border: none;
+    font-weight: bold;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.171);
+    border-radius: 3px;
+    text-indent: 1rem;
+    outline: none;
 }
