--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ input {
 @keyframes fadein {
     from {filter: brightness(0%);}
     to {filter: brightness(90%);}
-    /* 100% {backdrop-filter: brightness(90%); background: linear-gradient(25deg rgba(255, 0, 0, 0.2), transparent, rgba(0, 0, 255, 0.2));} */
 }
 
 @keyframes slidein {
@@ -52,7 +51,6 @@ button {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
-    /* background: linear-gradient(115deg, rgba(255, 255, 255, 0.1), transparent, rgba(255, 255, 255, 0.1)); */
     filter: brightness(0%);
     animation: fadein 2s cubic-bezier(.47,.1,.5,1) forwards; 
     z-index: 1;
@@ -94,10 +92,6 @@ button {
     #notificationBadge {
         width: calc(100% - 2rem);
     }
-    
-    /* .container:hover {
-        height: 60%;
-    } */
 }
 
 @media (min-width: 930px) {
@@ -117,13 +111,13 @@ button {
         z-index: 3;
     }
     
+    .container:hover {
+        height: calc(30% + 20px);
+    }
+
     #notificationBadge {
         width: 50%;
     }
-    
-    /* .container:hover {
-        height: 32%;
-    } */
 }
 
 .firstscreen, .signup, .details {
@@ -153,7 +147,6 @@ button {
     height: 2rem;
     line-height: 32px;
     font-size: 27px;
-    /* letter-spacing: .5px; */
     text-align: center;
     position: absolute;
     left: 50%;
@@ -186,8 +179,9 @@ button {
     color: white;
     border-radius: 8px;
     cursor: pointer;
+    outline: 0px solid white;
     font-size: 20px;
-    transition: 200ms ease-in-out;
+    transition: 60ms ease-in-out;
 }
 
 .green {
@@ -195,8 +189,7 @@ button {
 }
 
 .choose:hover {
-    width: calc(100% - .5rem);
-    background: rgb(0, 153, 255);
+    outline: 5px solid rgba(1, 103, 255, 0.459);
 }
 
 .form {
@@ -222,10 +215,10 @@ button {
     border: none;
     border-radius: 8px;
     text-indent: 1rem;
-    outline: none;
+    outline: 0px solid white;
     font-size: 14px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.308);
-    transition: outline 40ms ease-in-out;
+    transition: outline 60ms ease-in-out, text-indent 100ms ease-in-out;
 }
 
 .form input:focus {
@@ -238,17 +231,17 @@ button {
     padding: 0;
     margin: 0;
     background: rgb(0, 119, 255);
+    outline: none;
     font-size: 20px;
     color: white;
     border: none;
     border-radius: 8px;
-    transition: 200ms ease-in-out;
+    transition: 60ms ease-in-out;
     cursor: pointer;
 }
 
 .form button:not(:disabled):hover {
-    width: calc(100% + 12px);
-    background: rgb(0, 153, 255);
+    outline: 5px solid rgba(1, 103, 255, 0.459);
 }
 
 .form button:disabled {
@@ -282,7 +275,17 @@ button {
     border: none;
     font-weight: bold;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.171);
+    transition: outline 60ms ease-in-out, text-indent 100ms ease-in-out;
     border-radius: 8px;
     text-indent: 1rem;
     outline: none;
+}
+
+.serdet input:hover {
+    outline: 5px solid rgba(1, 103, 255, 0.459);    
+}
+
+input:not(:read-only):focus {
+    transition: text-indent 100ms ease-in-out;
+    text-indent: calc(1.2rem);
 }
