--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ input {
 }
 
 button {
+    font-family: inp;
+    font-size: 16px;
+    line-height: 30px;
     z-index: 20;
 }
 
@@ -111,6 +114,25 @@ button {
         transition: 0.3s ease-out;
         z-index: 3;
     }
+
+    /* .container {
+        position: fixed;
+        top: 50%;
+        left: calc(100% - 1rem);
+        transform: translate(-100%, -50%);
+        width: 25%;
+        height: 60%;
+        overflow: hidden;
+        background: #ffffff;
+        border-radius: 16px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+        transition: 0.3s ease-out;
+        z-index: 3;
+    }
+
+    .container button {
+        width: calc(100% - 2rem);
+    } */
     
     .container:hover {
         height: calc(30% + 20px);
@@ -181,7 +203,6 @@ button {
     border-radius: 8px;
     cursor: pointer;
     outline: 0px solid white;
-    font-size: 20px;
     transition: 60ms ease-in-out;
 }
 
@@ -233,7 +254,6 @@ button {
     margin: 0;
     background: rgb(0, 119, 255);
     outline: none;
-    font-size: 20px;
     color: white;
     border: none;
     border-radius: 8px;
@@ -249,10 +269,6 @@ button {
     background:rgb(175, 175, 175);
     color: black;
     cursor: default;
-}
-
-.form button span {
-    transform: skew(15deg);
 }
 
 .serdet {
