--- a/styles.css
+++ b/styles.css
@@ -1,308 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');
+* {font-family: 'Lexend', sans-serif;}
+
 body {
-    background: rgb(19, 19, 19);
-    /* background-image: url(src/img/mc.png);
-    background-size: 100% auto;
-    background-repeat: no-repeat; */
-    margin: 0;
+    background: black;
     padding: 0;
+    margin: 0;
 }
 
-@font-face {
-    font-family: main;
-    src: url(src/fonts/Bayon-Regular.ttf);
-}
-
-@font-face {
-    font-family: inp;
-    src: url(src/fonts/Quicksand-Regular.ttf);
-}
-
-*:not(input) {
-    font-family: main;
-}
-
-input {
-    font-family: inp;
-}
-
-@keyframes fadein {
-    from {filter: brightness(0%);}
-    to {filter: brightness(90%);}
-}
-
-@keyframes slidein {
-    from {top: 4rem; opacity: 0;}
-    to {top: 2rem; opacity: 1;}
-}
-
-button {
-    font-family: inp;
-    font-size: 16px;
-    line-height: 30px;
-    z-index: 20;
-}
-
-.bg {
+.container {
     position: fixed;
-    transform: translate(0%, 0%);
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-image: url(src/img/mc.png);
-    background-size: auto auto;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: cover;
-    filter: brightness(0%);
-    animation: fadein 2s cubic-bezier(.47,.1,.5,1) forwards; 
-    z-index: 1;
-}
-
-#notificationBadge {
-    position: absolute;
-    top: -2.5rem;
-    left: 50%;
-    height: 2rem;
-    transform: translate(-50%, 0%);
-    background:rgb(94, 197, 85);
-    border: 3px solid rgb(47, 165, 31);
-    border-radius: 6px;
-    color:rgb(9, 139, 9);
-    display: flex;
-    justify-content: center;
-    z-index: 10;
-    align-items: center;
-    transition: 200ms ease-in-out;
-}
-
-@media (max-width: 928px) {
-    .container {
-        position: fixed;
-        top: 101%;
-        left: 50%;
-        transform: translate(-50%, -100%);
-        width: 101%;
-        height: 40%;
-        background: #ffffff;
-        border-top-left-radius: 16px;
-        border-top-right-radius: 16px;
-        overflow: hidden;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-        transition: 0.3s ease-out;
-        z-index: 3;
-    }
-
-    #notificationBadge {
-        width: calc(100% - 2rem);
-    }
-}
-
-@media (min-width: 930px) {
-    .container {
-        position: fixed;
-        top: 101%;
-        left: 50%;
-        transform: translate(-50%, -100%);
-        width: 50%;
-        height: 30%;
-        overflow: hidden;
-        background: #ffffff;
-        border-top-left-radius: 16px;
-        border-top-right-radius: 16px;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-        transition: 0.3s ease-out;
-        z-index: 3;
-    }
-
-    /* .container {
-        position: fixed;
-        top: 50%;
-        left: calc(100% - 1rem);
-        transform: translate(-100%, -50%);
-        width: 25%;
-        height: 60%;
-        overflow: hidden;
-        background: #ffffff;
-        border-radius: 16px;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-        transition: 0.3s ease-out;
-        z-index: 3;
-    }
-
-    .container button {
-        width: calc(100% - 2rem);
-    } */
-    
-    .container:hover {
-        height: calc(30% + 20px);
-    }
-
-    #notificationBadge {
-        width: 50%;
-    }
-}
-
-.firstscreen, .signup, .details {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    transition: left 400ms ease-in-out;
-}
-
-.signup {
-    left: 100%;
-    top: 0%;
-}
-
-.details {
-    left: 100%;
-    top: 0%;
-}
-
-.message {
-    color: #0f0f0f;
-    font-weight: normal;
-    width: calc(100% - 2rem);
-    max-width: calc(100% - 2rem);
-    height: 2rem;
-    line-height: 32px;
-    font-size: 27px;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 2rem;
-    transform: translate(-50%, 0%);
-    z-index: 2;
-}
-
-.buttons {
-    position: absolute;
-    height: 4rem;
-    width: auto;
-    aspect-ratio: 32/6;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 0%);
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.choose {
-    position: relative;
-    width: calc(100% - 1rem);
-    height: calc(100% - 0.5rem);
-    background:rgb(0, 119, 255);
-    border: none;
-    color: white;
-    border-radius: 8px;
-    cursor: pointer;
-    outline: 0px solid white;
-    transition: 60ms ease-in-out;
-}
-
-.green {
-    background: rgb(38, 153, 67);
-}
-
-.choose:hover {
-    outline: 5px solid rgba(1, 103, 255, 0.459);
-}
-
-.form {
-    position: absolute;
-    background: none;
-    transform: translate(-50%, 0%);
-    left: 50%;
-    top: 8rem;
-    width: 20rem;
-    max-width: calc(100% - 4rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-
-}
-
-.form input {
-    width: 100%;
-    height: 3rem;
-    padding: 0;
-    margin: 0;
-    border: none;
-    border-radius: 8px;
-    text-indent: 1rem;
-    outline: 0px solid white;
-    font-size: 14px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.308);
-    transition: outline 60ms ease-in-out, text-indent 100ms ease-in-out;
-}
-
-.form input:focus {
-    outline: 5px solid rgba(1, 103, 255, 0.459);
-}
-
-.form button {
-    width: calc(100% + 6px);
-    height: 3rem;
-    padding: 0;
-    margin: 0;
-    background: rgb(0, 119, 255);
-    outline: none;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    transition: 60ms ease-in-out;
-    cursor: pointer;
-}
-
-.form button:not(:disabled):hover {
-    outline: 5px solid rgba(1, 103, 255, 0.459);
-}
-
-.form button:disabled {
-    background:rgb(175, 175, 175);
-    color: black;
-    cursor: default;
-}
-
-.serdet {
-    position: absolute;
     top: 50%;
     left: 50%;
-    width: 20rem;
-    height: fit-content;
+    width: calc(100% - 10rem);
+    height: calc(100% - 10rem);
+    background-color: transparent;
     transform: translate(-50%, -50%);
-    display: flex;
-    gap:2rem;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background: none;
+    color: white;
 }
 
-.serdet input {
-    width: 100%;
-    height: 3rem;
-    border: none;
-    font-weight: bold;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.171);
-    transition: outline 60ms ease-in-out, text-indent 100ms ease-in-out;
-    border-radius: 8px;
-    text-indent: 1rem;
-    outline: none;
-}
-
-.serdet input:hover {
-    outline: 5px solid rgba(1, 103, 255, 0.459);    
-}
-
-input:not(:read-only):focus {
-    transition: text-indent 100ms ease-in-out;
-    text-indent: calc(1.2rem);
-}
