--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: main;
-    src: url(../src/fonts/PlusJakartaSans-VariableFont_wght.ttf);
+    src: url(../src/all/PlusJakartaSans-VariableFont_wght.ttf);
 }
 
 body {
@@ -11,20 +11,46 @@ body {
     padding: 0;
 }
 
+body::-webkit-scrollbar {
+    width: 1rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: rgb(24, 25, 26);
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgb(58, 66, 71);
+    border-radius: 50px;
+}
+
 * {
     font-family: main;
     color: #f0f0f0;
     outline: none;
+    -webkit-user-drag: none;
+    user-select: none;
 }
 
 @keyframes fadeinout {
-    0% {transform: scale(0.5); filter: blur(500px) brightness(30%) hue-rotate(0deg);}
-    100% {transform: scale(0.5); filter: blur(500px) brightness(25%) hue-rotate(-20deg);}
+    0% {transform: scale(1.3); filter: blur(100px) brightness(50%);}
+    100% {transform: scale(1.1); filter: blur(100px) brightness(35%);}
 }
 
 @keyframes scaleUp {
-    0% {transform: scale(0.2); filter: blur(500px) brightness(0%);}
-    100% {transform: scale(0.5); filter: blur(500px) brightness(30%);}
+    0% {transform: scale(1); filter: blur(100px) brightness(0%);}
+    100% {transform: scale(1.3); filter: blur(100px) brightness(50%);}
+}
+
+.sts_hidden {
+    bottom: 1rem !important;
+    opacity: 0 !important;
+}
+
+.hidden {
+    position: absolute;
+    margin-left: 5rem;
+    opacity: 0;
 }
 
 .tmp-nolink {
@@ -40,16 +66,43 @@ body {
     align-items: center;
 }
 
+#back_to_top {
+    position: fixed;
+    left: 2rem;
+    bottom: 2rem;
+    width: 50px;
+    height: auto;
+    aspect-ratio: 1/1;
+    border-radius: 5px;
+    font-size: small;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    letter-spacing: -1px;
+    background: linear-gradient(-70deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.1));
+    border: none;
+    outline: 3px solid rgba(255, 255, 255, 0.2);
+    transition: 75ms ease-in-out;
+}
+
+#back_to_top:hover {
+    outline: 3px solid rgba(255, 255, 255, 0.3);
+}
+
 .bg {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    /* overflow: hidden; */
 }
 
 .bg .bg-shape {
+    width: 50%;
     transform: scale(0);
     filter: blur(500px) brightness(0%);
     animation: 3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards scaleUp;
@@ -58,8 +111,8 @@ body {
 }
 
 .navbar-top {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 0px;
     left: 50%;
     transform: translate(-50%, 0%);
     width: 100%;
@@ -67,8 +120,8 @@ body {
     height: 6rem;
     z-index: 10;
     /* border-bottom: 2px solid rgba(255, 255, 255, 0.089); */
-    /* background: rgba(0, 0, 0, 0.1); */
-    /* backdrop-filter: blur(10px); */
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
 }
 
 .navbar-top .wrap {
@@ -86,7 +139,9 @@ body {
     width: 24px;
     height: auto;
     aspect-ratio: 1/1;
-    fill: rgb(255, 255, 255);
+    filter: invert(42%) sepia(30%) saturate(1352%) hue-rotate(190deg) brightness(100%) contrast(200%);
+    -webkit-user-drag: none;
+    user-select: none;
 }
 
 .wrap #typewrite {
@@ -106,7 +161,12 @@ body {
     border: 1px solid rgb(0, 107, 168);
     border-bottom: 2px solid rgb(0, 107, 168);
     border-radius: 5px;
-    box-shadow: 0px 0px 13px 1px rgb(0, 107, 168, 0.3);
+    box-shadow: 0px 0px 0px 2px rgb(0, 107, 168, 0.3);
+    transition: 200ms ease-in-out;
+}
+
+.lol:hover {
+    box-shadow: 0px 0px 0px 3px rgb(0, 107, 168, 0.4);
 }
 
 .content {
@@ -115,37 +175,37 @@ body {
     transform: translate(-50%, 0%);
     width: 100%;
     max-width: 1600px;
-    height: 100%;
+    height: auto;
 }
 
-.content h1 {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.content .section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    /* background: rgb(255, 0, 0, 0.3); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section h1 {
     width: fit-content;
     height: fit-content;
     font-size: 80px;
     text-align: center;
 }
 
-.content h3 {
-    position: relative;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.section h3 {
     width: fit-content;
     height: fit-content;
-    font-size: large;
+    font-size: 30px;
+    padding-bottom: 5rem;
     text-align: center;
     color:rgba(255, 255, 255, 0.2);
 }
 
-.content .buttons {
-    position: relative;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.section .buttons {
     width: fit-content;
     height: fit-content;
     display: flex;
