--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body::-webkit-scrollbar-thumb {
     font-size: small;
     display: flex;
     justify-content: center;
+    pointer-events: all;
     align-items: center;
     cursor: pointer;
     letter-spacing: -1px;
