--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,34 @@ body {
     color: #303030;
 }
 
+#burger {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+    width: 1rem;
+    height: auto;
+    aspect-ratio: 1/1;
+    transform: translate(-100%, 0%);
+
+    & div {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 2px;
+        background: #d0d0d0;
+    }
+
+    & div:nth-child(2) {
+        top: 50%;
+    }
+
+    & div:nth-child(3) {
+        top: 100%;
+    }
+}
+
 #welcome {
     position: fixed;
     top: 50%;
