--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,12 @@ body {
     position: fixed;
     top: 2rem;
     left: 2rem;
-    width: 1rem;
-    height: auto;
-    aspect-ratio: 1/1;
+    width: auto;
+    height: 1rem;
+    aspect-ratio: 4/3;
     transform: translate(-100%, 0%);
+    cursor: pointer;
+    z-index: 5;
 
     & div {
         position: absolute;
@@ -55,6 +57,22 @@ body {
         top: 100%;
         transform: translate(-50%, -100%);
     }
+}
+
+#nav {
+    position: fixed;
+    top: 0;
+    left: -20rem;
+    width: 20rem;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
+    transition: left .3s ease-out;
+    z-index: 4;
+}
+
+.show {
+    left: 0rem;
 }
 
 #welcome {
