--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,15 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     background: #efefef;
     color: #303030;
+}
+
+[noise] {
+    background-image: url(./src/img/noise256.png);
+    background-size: 256px 256px;
 }
 
 #burger {
@@ -34,7 +41,6 @@ body {
     width: auto;
     height: 1rem;
     aspect-ratio: 4/3;
-    transform: translate(-100%, 0%);
     cursor: pointer;
     z-index: 5;
 
@@ -45,7 +51,7 @@ body {
         transform: translate(-50%, 0%);
         width: 100%;
         height: 2px;
-        background: #d0d0d0;
+        background: #000;
     }
 
     & div:nth-child(2) {
@@ -62,17 +68,68 @@ body {
 #nav {
     position: fixed;
     top: 0;
-    left: -20rem;
-    width: 20rem;
+    left: 0;
+    width: 30rem;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(5px);
-    transition: left .3s ease-out;
+    background: #fff;
+    transform: translate(-100%, 0%);
+    transition: transform .2s ease-out;
     z-index: 4;
 }
 
+#nav .navcontent {
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 5rem);
+    display: flex;
+    flex-direction: column;
+}
+
+.navcontent header {
+    position: relative;
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -100%);
+        width: 10rem;
+        height: 2px;
+        background: #202020;
+    }
+}
+
+.navcontent a {
+    width: 100%;
+    height: 5rem;
+    cursor: pointer;
+    /* background: #f002; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    transition: background .1s ease-out;
+}
+
+.navcontent a:hover {
+    background: rgba(0, 0, 0, 0.05);
+}
+
 .show {
-    left: 0rem;
+    transform: translate(0%, 0%) !important;
 }
 
 #welcome {
@@ -108,7 +165,7 @@ body {
         top: 100%;
         left: 0;
         width: 0px;
-        height: 2px;
+        height: 1px;
         background: #303030;
         animation: .3s loadup linear 1.2s;
     }
