--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body {
 .section {
     position: relative;
     width: 100%;
-    height: 60vh;
+    height: fit-content;
+    min-height: 70vh;
     padding-top: 5rem;
     padding-bottom: 10rem;
 
