--- a/style.css
+++ b/style.css
@@ -1,206 +1,152 @@
 @font-face {
-    font-family: lex;
-    src: url(./src/Lexend-VariableFont_wght.ttf);
+    font-family: 'lexend';
+    src: url(./src/font/Lexend-VariableFont_wght.ttf);
 }
 
 * {
-    font-family: lex;
+    font-family: 'lexend';
+    outline: none;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+    background: rgb(0, 0, 0);
+    color: white;
+    background-image: linear-gradient(-45deg, black 80%, #101010 80%);
+    background-size: 20px 20px;
+    background-position: 50% 50%;
 }
 
-.nav {
+h1 {
+    font-size: 5rem;
+    line-height: 100%;
+    padding-bottom: 1rem;
+    border-left: 8px solid white;
+    border-top: 1px dashed white;
+    padding: 2rem 0 2rem 2rem;
+}
+
+p, li {
+    font-size: 1.5rem;
+    line-height: 200%;
+    color: #dbdbdb;
+    padding-bottom: 2rem;
+}
+
+li {
+    line-height: 150%;
+    max-width: 40ch;
+}
+
+iframe {
+    padding-bottom: 1rem;
+}
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: brightness(20%) blur(50px);
+    /* background-image: url(./src/img/GradientBackground.png); */
+    background-image: linear-gradient(to top, #0004, transparent);
+    background-size: cover;
+    /* background-image: linear-gradient(-45deg, black 80%, #444 80%);
+    background-size: 20px 20px;
+    background-position: 50% 50%; */
+    z-index: -1;
+}
+
+.wrapper {
+    position: relative;
+    top: 4rem;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 60%;
+    height: fit-content;
+    min-height: calc(100vh - 4rem);
+    z-index: 1;
+}
+
+.topbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 4rem;
-    background: rgba(0, 0, 0, 0.8);
-    /* background: white; */
-    backdrop-filter: blur(6px);
     display: flex;
     flex-direction: row;
+    background: rgb(12, 12, 12);
+    backdrop-filter: blur(50px);
     z-index: 5;
 }
 
-.nav button {
+.topbar button {
     width: fit-content;
     height: 100%;
-    padding: 0 1rem 0 1rem;
-    background: none;
+    padding: 0 2rem 0 2rem;
+    background: transparent;
+    color: #fffb;
+    font-weight: 600;
     border: none;
     outline: none;
-    color: white;
-    /* color: black; */
+    cursor: pointer;
     text-transform: uppercase;
-    font-weight: bolder;
     font-size: 1rem;
-    transition: background 0.1s ease-out;
-    /* cursor: pointer; */
-
-    /* &:hover {
-        background: rgba(255, 255, 255, 0.1);
-    } */
-}
-
-.pre-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    /* background-image: url(https://img.freepik.com/free-vector/gradient-stock-market-concept_23-2149166910.jpg);
-    background-size: cover;
-    background-position: 50% 50%;
-    filter: blur(3px); */
-    background: linear-gradient(-30deg, #ddd, white);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    & p {
-        font-size: 3rem;
-        text-transform: uppercase;
-        font-weight: bold;
-        color: transparent;
-        background: linear-gradient(-90deg, rgb(255, 0, 255), rgb(0, 174, 255));
-        background-clip: text;
-    }
-
-    & h2 {
-        color: #0004;
-    }
-}
-
-.content {
-    position: absolute;
-    top: 100vh;
-    left: 0;
-    width: 100%;
-    height: fit-content;
-    min-height: 50%;
-}
-
-.section {
-    position: relative;
-    width: 100%;
-    height: fit-content;
-    min-height: 70vh;
-    padding-top: 5rem;
-    padding-bottom: 10rem;
-
-    &:nth-child(even) {
-        color: white;
-    }
-}
-
-.section .waveTop {
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    width: 120%;
-    height: 20vh;
-    transform: translate(-50%, -100%);
-}
-
-.section .waveBottom {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    width: 120%;
-    height: 20vh;
-    transform: translate(-50%, 0%);
-}
-
-.section .wrapper {
-    position: absolute;
-    top: 5rem;
-    width: calc(50% - 10rem);
-    height: calc(100% - 10rem);
-    transform: translate(-50%, 0%);
-    /* padding-top: 10rem; */
-    /* padding-bottom: 10rem; */
-}
-
-.section:nth-child(odd) .wrapper {
-    left: 35%;
-}
-
-.section:nth-child(even) .wrapper {
-    left: 65%;
-}
-
-.section .image {
-    position: absolute;
-    top: 5rem;
-    width: calc(30% - 10rem);
-    height: calc(100% - 10rem);
-    transform: translate(-50%, 0%);
-    background-position: 40% 50%;
-    background-size: auto 100%;
-    border-radius: 8px;
-    transition: .2s ease-out;
+    transition: color 100ms ease-out, background-color 100ms ease-out;
+    z-index: 1;
 
     &:hover {
-        background-size: auto 105%;
+        color: white;
+        background-color: #0008;
     }
 }
 
-.section:nth-child(odd) .image {
-    left: 75%;
+.topbar .progress-container {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: #101010;
+    border-radius: 5px;
+    transform: translate(0%, -100%);
+    z-index: 2;
 }
 
-.section:nth-child(even) .image {
-    left: 25%;
+.progress-container #progress-value {
+    width: 0%;
+    height: 100%;
+    background: linear-gradient(to right, #00bbff, #008888);
+    opacity: 1;
+    border-radius: 5px;
 }
 
-.section .wrapper .title {
-    text-transform: uppercase;
-    font-size: 2.5rem;
-
-    & ::after {
-        content: '';
-        top: 100%;
-        left: 0;
-        width: 200px;
-        height: 2px;
-        transform: translate(0%, -100%);
-        background: rgba(0, 0, 0, .1);
-        filter: invert();
-    }
-}
-
-.section .wrapper p {
-    font-size: 1.1rem;
-    line-height: 1.5rem;
-    background: rgba(0, 0, 0, 0.1);
-    padding: 2rem;
-    border-radius: 8px;
-}
-
-.listbox {
-    width: 50%;
-    min-width: 400px;
-    height: fit-content;
-    background: #eee;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: .2rem;
-    border-radius: 13px;
-
-    & a {
-        color: black;
-        text-decoration: none;
-        font-weight: bold;
+@media (max-width: 1200px) {
+    .wrapper {
+        width: calc(100% - 2rem);
     }
 
-    & a:visited {
-        color: rgb(255, 115, 0);
+    h1 {
+        word-wrap: break-word;
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+
+    .topbar {
+        display: grid !important;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .topbar button {
+        width: 100%;
+        padding: 0;
     }
 }
