--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'lexend';
-    src: url(./src/fonts/Lexend-VariableFont_wght.ttf);
+    src: url(./src/font/Lexend-VariableFont_wght.ttf);
 }
 
 * {
@@ -18,6 +18,7 @@ body {
     background-image: linear-gradient(-45deg, black 80%, #101010 80%);
     background-size: 20px 20px;
     background-position: 50% 50%;
+    overflow: hidden auto;
 }
 
 h1 {
@@ -69,6 +70,11 @@ iframe {
     width: 60%;
     height: fit-content;
     min-height: calc(100vh - 4rem);
+    /* border-left: 1px dashed white;
+    border-right: 1px dashed white; */
+    border: 1px dashed #fff4;
+    margin-bottom: 6rem;
+    padding: 0 2rem 0 2rem;
     z-index: 1;
 }
 
@@ -128,7 +134,7 @@ iframe {
 
 @media (max-width: 1200px) {
     .wrapper {
-        width: calc(100% - 2rem);
+        width: calc(100% - 4rem);
     }
 
     h1 {
